tests/invalid/continue_not_in_loop.c
int main() {
    continue;
}
// ERROR: Line 2, Error 3008